test/deprecated/error-msg-removed2.good
error-msg-removed2.chpl:2: error: msg field in Error is no longer available
