test/deprecated/error-msg-removed2.chpl
var e = new Error();
writeln(e.msg);
